[package]
name = "vollmond"
version = "0.2.0"
authors = ["puppetmaster"]
edition = "2021"
#build = "build.rs"

[dependencies]
quad-snd = { git = "https://github.com/not-fl3/quad-snd", rev = "68691cf"  }
macroquad = { git = "https://github.com/not-fl3/macroquad", rev = "7faf16a"  }

[dependencies.miniquad]
version = "0.4.0"

#[dependencies.macroquad]
#path = "../macroquad"
#version = "0.3.0-alpha.12"

[dependencies.nanoserde]
#path = "../nanoserde"
version = "0.1.21"

[dependencies.keyframe]
version = "1.0.3"

[dependencies.keyframe_derive]
version = "1.0.0"

[profile.release]
lto = "fat"
strip = "symbols"
opt-level = 3
#codegen-units = 1
panic = "abort"
